lib/translator/test/fixtures/ok/raw/from-loop.prg
PROGRAM from_loop
BEGIN
    FROM INT i = 0 TO 6 STEP 2
        0
    END
END
