lib/translator/test/fixtures/error/raw/from-counter-type.prg
PROGRAM from_wrong_counter_data_type
BEGIN
    FROM FLOAT i = 0.0 TO 5 STEP 1
    END
END
